# grzemail

./: .gitignore  pyproject.toml
grzemail/: __main__.py
grzemail/client/: __init__.py  app.py  email_bar.py  mailbox_bar.py
grzemail/daemon/: __init__.py  cache.py  downloader.py
grzemail/models/: email.py  fetcher.py
grzemail/models/wrappers/: client.py  mailbox.py  message.py  wrapper.py
grzemail/services/: FilterFactory.py  __init__.py  config.py  database.py  secrets.py
grzemail/utils/: hash.py  namespace.py
